[US13] Create endpoints for Google+ login and forgot password